force-app/main/default/objects/Vehicle_Maintenance__c/Vehicle_Maintenance__c.object-meta.xml
<CustomObject>
    <description>Track Maintenance on Vehicles</description>
    <label>Vehicle Maintenance</label>
    <nameField>
        <label>Vehicle Maintenance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicle Maintenances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>