force-app/main/default/objects/Vehicle_Maintenance__c/fields/Date_Completed__c.field-meta.xml
<CustomField>
    <fullName>Date_Completed__c</fullName>
    <description>Date Maintenance completed</description>
    <label>Date Completed</label>
    <type>Date</type>
</CustomField>