force-app/main/default/objects/Vehicle_Maintenance__c/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <description>Problem or reason for Maintenance</description>
    <label>Issue</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>