force-app/main/default/objects/Vehicle_Maintenance__c/fields/Labor__c.field-meta.xml
<CustomField>
    <fullName>Labor__c</fullName>
    <description>Labor Cost of Maintenance</description>
    <label>Labor</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>