force-app/main/default/objects/Vehicle_Maintenance__c/fields/Parts__c.field-meta.xml
<CustomField>
    <fullName>Parts__c</fullName>
    <description>Parts cost</description>
    <label>Parts</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>