force-app/main/default/objects/Vehicle_Maintenance__c/fields/Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Service_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Service Center completing maintenance</description>
    <label>Service Center</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehicle Maintenances</relationshipLabel>
    <relationshipName>Vehicle_Maintenances</relationshipName>
    <type>Lookup</type>
</CustomField>