force-app/main/default/objects/Vehicle_Maintenance__c/fields/Taxes_and_Surcharges__c.field-meta.xml
<CustomField>
    <fullName>Taxes_and_Surcharges__c</fullName>
    <description>Cost for Taxes and Other Charges</description>
    <label>Taxes and Surcharges</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>