force-app/main/default/objects/Vehicle_Maintenance__c/fields/Work_Completed__c.field-meta.xml
<CustomField>
    <fullName>Work_Completed__c</fullName>
    <description>Work completed</description>
    <label>Work Completed</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>