force-app/main/default/objects/Vehicle_Maintenance__c/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <description>Type of Work for Vehicle Maintenance</description>
    <label>Work Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vehicle_Work_Types</valueSetName>
    </valueSet>
</CustomField>