force-app/main/default/objects/Vehicle_Maintenance__c/recordTypes/DIY.recordType-meta.xml
<RecordType>
    <fullName>DIY</fullName>
    <active>true</active>
    <description>DIY Maintenance</description>
    <label>DIY</label>
</RecordType>